// protoc --proto_path=$GOPATH/src/:. --gogo_out=. ts.proto
syntax = "proto3";
package tspb;

option go_package = "tspb";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;

// Avoid generating fields because most types are very simple
// Thanks to https://github.com/thanos-io/thanos/blob/master/pkg/store/storepb/rpc.proto
// 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
//	XXX_unrecognized     []byte   `json:"-"`
//	XXX_sizecache        int32    `json:"-"`
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

message Tag {
    string key = 1;
    string value = 2;
}

// === point ===
message PointInt {
    int64 time = 1;
    int64 value = 2;
}

message PointIntTagged {
    string name = 1;
    PointInt point = 2 [(gogoproto.nullable) = false];
    repeated Tag tags = 3 [(gogoproto.nullable) = false];
}

message PointDouble {
    int64 time = 1;
    double value = 2;
}

message PointDoubleTagged {
    string name = 1;
    PointDouble point = 2 [(gogoproto.nullable) = false];
    repeated Tag tags = 3 [(gogoproto.nullable) = false];
}
// === point ===

// === series without data ===
// EmptySeries only contains meta and has no data
message EmptySeries {
    string name = 1;
    repeated Tag tags = 2 [(gogoproto.nullable) = false];
}
// === series without data ===

// === series row format ===
message SeriesIntTagged {
    string name = 1;
    repeated PointInt points = 2 [(gogoproto.nullable) = false];
    repeated Tag tags = 3 [(gogoproto.nullable) = false];
}

message SeriesDoubleTagged {
    string name = 1;
    repeated PointDouble points = 2 [(gogoproto.nullable) = false];
    repeated Tag tags = 3 [(gogoproto.nullable) = false];
}
// === series row format ===

// === series column format ==
message SeriesIntTaggedColumnar {
    string name = 1;
    repeated int64 times = 2;
    repeated int64 values = 3;
    repeated Tag tags = 4 [(gogoproto.nullable) = false];
}

message SeriesDoubleTaggedColumnar {
    string name = 1;
    repeated int64 times = 2;
    repeated double values = 3;
    repeated Tag tags = 4 [(gogoproto.nullable) = false];
}
// === series column format ==